tests/ui/const-generics/mgca/type-const-assoc-const-without-body.stderr
error: associated constant in `impl` without body
  --> $DIR/type-const-assoc-const-without-body.rs:13:5
   |
LL |     type const SIZE: usize;
   |     ^^^^^^^^^^^^^^^^^^^^^^-
   |                           |
   |                           help: provide a definition for the constant: `= <expr>;`

error: aborting due to 1 previous error

